--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   },
   "dependencies": {
     "react": "^16.7.0-alpha.0",
-    "react-dom": "^16.7.0-alpha.0",
-    "react-router-dom": "^5.2.0",
+    "react-addons-test-utils": "^16.7.0-alpha.0",
     "react-redux": "^7.2",
+    "react-router-dom": "^5.2.0",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1",
@@ -36,11 +36,15 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "chai-equal-jsx": "^1.0.9",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "^2.13.1",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-react": "^5.2.2",
     "mocha": "^2.4.5",
     "nyc": "^6.4.4",
+    "react-dom": "^16.14.0",
+    "react-test-renderer": "^17.0.1",
     "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.14.1",
