finish ioRoute test

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "coverage": "NODE_ENV=test nyc --include src --all -r text -r lcov -r text --require babel-core/register mocha "
   },
   "dependencies": {
+    "enzyme-to-json": "^3.6.1",
     "react": "^16.7.0-alpha.0",
     "react-addons-test-utils": "^16.7.0-alpha.0",
     "react-redux": "^7.2",
@@ -23,6 +24,7 @@
     "socket.io": "^1.4.6"
   },
   "devDependencies": {
+    "@testing-library/react": "^11.2.3",
     "babel-cli": "^6.7.7",
     "babel-core": "^6.26.3",
     "babel-eslint": "^6.1.0",
