--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "enzyme-to-json": "^3.6.1",
     "react": "^16.7.0-alpha.0",
-    "react-addons-test-utils": "^16.7.0-alpha.0",
     "react-redux": "^7.2",
     "react-router-dom": "^5.2.0",
     "redux": "^3.5.2",
@@ -25,6 +24,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "github:testing-library/user-event",
     "babel-cli": "^6.7.7",
     "babel-core": "^6.26.3",
     "babel-eslint": "^6.1.0",
@@ -43,6 +43,9 @@
     "eslint": "^2.13.1",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-react": "^5.2.2",
+    "expect": "^26.6.2",
+    "jest": "^26.6.3",
+    "jsdom": "^16.4.0",
     "mocha": "^2.4.5",
     "nyc": "^6.4.4",
     "react-dom": "^16.14.0",
